[metadata]
name = samsung_mdc
description = Implementation of the Samsung Multiple Display Control 
              Protocol via TCP/IP based on the Smart Signage User Manual
              (Common Use) LFDCOMNEN-01_Common-use_2018_Eng_20190329.0
long_description = file: README.rst
long_description_content_type = text/x-rst; charset = UTF-8
url = https://github.com/psmsmets/samsung_mdc
author = Pieter Smets
author_email = mail@pietersmets.be
maintainer  = Pieter Smets
maintainer_email = mail@pietersmets.be
license = 'GNU General Public License v3 (GPLv3)'
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Developers
    License :: OSI Approved :: MIT license 
    Operating System :: Unix
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Education
keywords = samsung, display, control, automation, mdc, socket, tcp/ip
project_urls =
    Source = https://github.com/psmsmets/samsung_mdc
    Tracker = https://github.com/psmsmets/samsung_mdc/issues

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
python_requires = >=3.7
setup_requires =
    setuptools_scm

[options.entry_points]
console_scripts =
    samsung_mdc = samsung_mdc.__main__:main

[bdist_wheel]
universal = true
